# waverider

./: .gitignore  .mcp.json.template  .pre-commit-config.yaml  .secrets.baseline  AGENT_BRIEF_CIFAR10_CLAIM.md  CHANGELOG.md  CIFAR10_CLAIM_VERIFICATION.md  CITATION.cff  HANDOFF.md  LICENSE  README.md  pyproject.toml  release-notes.md
benchmarks/: __init__.py  tf_setup.py
benchmarks/canonical_tests/: __init__.py  backbone_mlp_benchmark.py  backbone_rama_benchmark.py  cfar-100.csv  cifar100_analysis.md  cifar100_architecture_results.json  cifar100_manifold_architecture.py  cifar100_report.md  cifar100_report.tex  cifar100_resnet_manifold_architecture.py  cifar100_resnet_manifold_architecture_results.json  cifar100_tau_sweep_results.json  cifar10_analysis.md  cifar10_architecture_results.json  cifar10_manifold_architecture.py  cifar10_report.md  cifar10_report.tex  cifar_10_probe.csv  cifar_architecture_sweep.py  digits_manifold_architecture.py  digits_manifold_architecture_results.json  digits_manifold_knn.py  digits_manifold_model.py  digits_report.md  digits_report.tex  gen_gallery_voxels.py  helix_manifold_observer.py  helix_manifold_observer_results.json  iris_adam_vs_manifold.py  iris_architecture_results.json  iris_manifold_adam_walker.py  iris_manifold_architecture.py  iris_manifold_model.py  iris_report.md  iris_report.tex  manifold_dim_probe.py  manifold_dim_probe_cifar100_results.json  manifold_dim_probe_cifar10_results.json  manifold_dim_probe_results.json  manifold_voxel_app.py  (+20 more)
benchmarks/canonical_tests/clinical/: __init__.py  alzheimers_disease_architecture_results.json  alzheimers_report.md  alzheimers_report.tex  breast_cancer_disease_architecture_results.json  breast_cancer_report.md  breast_cancer_report.tex  dermatology_disease_architecture_results.json  dermatology_report.md  dermatology_report.tex  diabetes_disease_architecture_results.json  disease_manifold_architecture.py  gen_voxel_viz.py  heart_disease_architecture_results.json  heart_report.md  heart_report.tex  kan_breast_results.json  kan_clinical.py  kan_dermatology_results.json  kan_diabetes_results.json  kan_heart.py  kan_heart_results.json  kan_parkinsons_results.json  parkinsons_disease_architecture_results.json  parkinsons_report.md  parkinsons_report.tex
benchmarks/manifold_model/: __init__.py  mnist_manifold_model.py
docs/: INDEX.md  USAGE.md  analysis_v0.8.0.md  analysis_v0.8.1.md  analysis_v0.9.0.md
docs/manifold_observer/: manifold_observer.md
docs/manifold_walker_spec/: manifold_walker_spec.md  manifold_walker_spec.tex
docs/waverider/: manifold_voxel_viz.md  waverider.md  waverider_infographic_summary.md  waverider_stack_summary.md
papers/backbone_manifold/: README.md  backbone_analysis.md  backbone_dssp_report.md  backbone_manifold_grid.vti  backbone_manifold_pointfield.npz  backbone_mlp_gpo.md  backbone_mlp_noaa.md  backbone_mlp_omega.md  backbone_mlp_phys.md  backbone_mlp_report.md  backbone_rama_report.md  backbone_report.md  feature_engineering_study.md  pisces_1000_report.md  pisces_50k_rama.md  pisces_5k_test.md
papers/clinical_manifolds/: clinical_manifolds.bib  kan_manifold_article.md
papers/manifold_classification/: DATA.md  manifold_classification.bib
papers/voxel_viz/: voxel_viz.bib
papers/waverider_article/: jmlr2e.sty
scripts/: setup-mcp.sh
src/: model_builder.py
src/waverider/: __init__.py  backbone_angles.py  backbone_embedder.py  backbone_manifold.py  dimensionality_discovery.py  geodesic_coords.py  graph_reasoner.py  manifold_model.py  manifold_observer.py  manifold_optimizer.py  manifold_walker.py  turtle3D.py  turtleND.py  universal_embedder.py  vector3D.py  voxel_viz.py
tests/: test_dimensionality_discovery.py  test_geodesic_coords.py  test_graph_reasoner.py  test_manifold_model.py  test_manifold_observer.py  test_manifold_walker.py  test_turtleND.py  test_universal_embedder.py  test_vector3D.py
