# pyproject.toml — waverider package configuration
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-05-04
#
# Quick install (poetry)
# ----------------------
#   poetry install                               core runtime only
#   poetry install --with benchmarks             core + scientific computing for benchmarks
#   poetry install --with viz                    core + voxel/Streamlit visualization
#   poetry install --with benchmarks,viz         full install
#   poetry install --extras "kg"                 core + KG integrations (doc-kg, pycode-kg, ftree-kg, proteuspy)
#   poetry install --with kgdeps                 core + git-only KG deps (agent-kg)
#   poetry install --all-extras --with dev       everything
#
# Quick install (pip)
# -------------------
#   pip install -e "."                           core only
#   pip install -e ".[kg]"                       core + KG integrations
#
# Run tests
# ---------
#   pytest                                       uses [tool.pytest.ini_options]
#   pytest -m "not slow"                         skip slow tests
#
# Build KG indices (after code changes)
# --------------------------------------
#   pycodekg build --repo .                      rebuild code KG (always wipes)
#   dockg build --repo .                         rebuild doc KG

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "waverider"
version = "0.8.1"
description = "Manifold-aware geometric ML stack: TurtleND, ManifoldWalker, ManifoldModel, ManifoldObserver"
authors = ["Eric G. Suchanek, PhD <suchanek@flux-frontiers.com>"]
license = "Elastic2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/waverider"
repository = "https://github.com/Flux-Frontiers/waverider"
packages = [{include = "waverider", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26,<2"
scikit-learn = ">=1.3"
tensorflow = "2.21.0"
tf-keras = ">=2.16.0"
onnx = ">=1.21.0"
onnxruntime = ">=1.24.4"
doc-kg    = { version = ">=0.15.3",  optional = true }
pycode-kg = { version = ">=0.19.2",  optional = true }
proteuspy = { version = ">=0.100.0", optional = true }

[tool.poetry.extras]
kg = ["pycode-kg", "doc-kg", "proteuspy"]

[tool.poetry.group.kgdeps]
optional = true

[tool.poetry.group.kgdeps.dependencies]
agent-kg = { git = "https://github.com/Flux-Frontiers/agent_kg.git" }

[tool.poetry.group.dev.dependencies]
detect-secrets = ">=1.5.0"
mypy           = ">=1.10.0"
pdoc           = ">=14.0.0"
pre-commit     = ">=4.5.1"
pylint         = ">=4.0.5"
pytest         = ">=8.0.0"
pytest-cov     = ">=5.0.0"
ruff           = ">=0.4.0"

[tool.poetry.group.benchmarks.dependencies]
# Core scientific computing for canonical benchmark scripts
# Install with: poetry install --with benchmarks
#
# System LaTeX required for .tex → PDF compilation in report_generator.py:
#   macOS  : brew install --cask mactex   (or mactex-no-gui)
#   Ubuntu : apt install texlive-latex-extra texlive-fonts-recommended latexmk
#   Arch   : pacman -S texlive-latexextra
# Without a LaTeX compiler the generator falls back to the matplotlib PDF.
matplotlib = ">=3.7"
scipy      = ">=1.11"
openpyxl   = ">=3.1"

[tool.poetry.group.viz.dependencies]
# Rendering and interactive visualisation stack
#   Desktop viewer : waverider-voxel-viz  (PyVista / VTK)
#   Web app        : manifold_voxel_app.py  (Streamlit + Plotly)
# Install with: poetry install --with viz
# Full install  : poetry install --with benchmarks,viz
pyvista   = { version = ">=0.47.3", extras = ["jupyter"] }
scipy     = ">=1.11"
streamlit = ">=1.35"
plotly    = ">=6.0"
pillow    = ">=10.0"

[tool.poetry.scripts]
waverider-voxel-viz = "waverider.voxel_viz:main"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true
mypy_path              = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# Legacy proteusPy code — numpy.array used as type hints, not worth rewriting
module = "waverider.turtle3D"
ignore_errors = true

[[tool.mypy.overrides]]
# Optional fields are None only before fit(); methods are only called post-fit
module = ["waverider.manifold_model", "waverider.manifold_observer"]
disable_error_code = ["union-attr", "index", "assignment", "arg-type", "type-var", "operator", "misc", "var-annotated"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that exercise real external dependencies",
]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "broad-exception-caught",   # W0718
    "cell-var-from-loop",       # W0640
    "cyclic-import",            # R0401
    "import-outside-toplevel",  # C0415
    "undefined-variable",       # E0602
]

# ---------------------------------------------------------------------------
# CodeKG / DocKG index configuration
# ---------------------------------------------------------------------------
[tool.pycodekg]
# Directories to include in the knowledge graph build and analysis.
include = ["src", "benchmarks"]

[tool.dockg]
# Add extra directories to exclude beyond the built-in SKIP_DIRS.
exclude = ["bundles", "dist", "data", "lib", "old", "programs", "turtlend_package", "pepys", "waverider_missions"]

# ---------------------------------------------------------------------------
# Poe tasks
# ---------------------------------------------------------------------------
[tool.poe.tasks.docs]
help     = "Generate project documentation"
sequence = [
    { shell = "cd src && pdoc --o ../docs waverider" },
]
